notebooks of monday 19

--- a/Day1/Introduction to Probability Problems Session 23 (no solutions).ipynb
+++ b/Day1/Introduction to Probability Problems Session 23 (no solutions).ipynb
@@ -29,17 +29,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73d8422b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5060987051979735e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "#all the dates have the same probability of being a birthday\n",
+    "#1/365 probability of 1st of may\n",
+    "#n=40\n",
+    "#P(AUB)=P(A)XP(B)= (1/365)*(1/365)\n",
+    "P_AUB=1/365**2\n",
+    "print(P_AUB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ea9a24",
+   "metadata": {},
+   "source": [
+    "### Problem 1b: What is the probability that no two people in the room share the same birthday? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ef11cce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9999924939012949\n"
+     ]
+    }
+   ],
+   "source": [
+    "#P(AnB)\n",
+    "#P(AUB)=P(A)+P(B)-P(AnB)\n",
+    "#P(AnB)=P(AUB)-P(A)-P(B)=0\n",
+    "\n",
+    "#P( not same birthday) = 1-P(same birthday) # favorable outcomes / total outcomes\n",
+    "P_not_same_birthday=1-P_AUB\n",
+    "print(P_not_same_birthday)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95782a2c",
+   "metadata": {},
+   "source": [
+    "combinations! Factorials"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b07f2047",
    "metadata": {},
    "source": [
-    "### Problem 1b: What is the probability that no two people in the room share the same birthday? \n",
-    "\n",
     "### Problem 1c: Using your answer to 1b, plot the probability of two people sharing the same birthday as a function of the number of people in the room. At what value of n does the probability exceed 50%? Is this result surprising to you?\n",
     "\n",
     "Hint: you may need the approximation that $(1 + x) \\approx e^x$ for |x|<<1.\n",
     "\n",
-    "### Bonus Problem (to be completed in the lunch break): Find at least two DSFP attendees who share the same birthday. "
+    "### Bonus Problem (to be completed in the lunch break): Find at least two DSFP attendees who share the same birthday.\n",
+    "\n",
+    "\n",
+    "![alt text](image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321e34dc",
+   "metadata": {},
+   "source": [
+    "![alt text](image-1.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f99da61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10876819018205101\n",
+      "0.891231809817949\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import factorial\n",
+    "import numpy as np\n",
+    "\n",
+    "n=40\n",
+    "P_different_birthday = factorial(365) /(365**n * factorial(365-n))\n",
+    "print(P_different_birthday)\n",
+    "\n",
+    "\n",
+    "def P_same_birthday(n):\n",
+    "    P_different_birthday = factorial(365) /(365**n * factorial(365-n))\n",
+    "    return 1 - P_different_birthday\n",
+    "\n",
+    "\n",
+    "P_same_birthday = 1 - P_different_birthday\n",
+    "print(P_same_birthday)\n",
+    "\n",
+    "#which n P_same_birthay = P_not_same_birthday = 0.5\n",
+    "#factorial(365) /(365**n * factorial(365-n)) = 0.5\n",
+    "#Taylor expansion of the factorial\n",
+    "#Stirling aproximation\n",
+    "#n! = sqrt(2*3.14*n) * (n/e)^n\n",
+    "from math import exp\n",
+    "\n",
+    "def factorial_approx(n):\n",
+    "    return np.sqrt(2 * np.pi * n) * (n / exp(1)) ** n\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -57,6 +176,8 @@
     "\n",
     "Before any doors are open, what is the conditional probability that the nth door contains a prize? \n",
     "\n",
+    "#P(Hi/I)=1/number of doors=1/N ; by the principle of indifference\n",
+    "\n",
     "\n",
     "\n",
     "### Problem 2b) Conditioning on data\n",
@@ -66,11 +187,14 @@
     "\n",
     "Then write down the probability that the kth door remains unopened given that $H_1$ is true.\n",
     "\n",
+    "P(H1|dk,I) = 1/(N-1)\n",
     "\n",
     "\n",
     "### Problem 2c) Law of total probability \n",
     "\n",
     "Use the law of total probability to write down an expression for the probability of observing $\\{d_k\\}$ open doors (w/o) prizes.\n",
+    "\n",
+    "p(dk|I)=\\sum p(dk|Hi,I)* p ()\n",
     "\n",
     "\n",
     "### Problem 2d) The key idea\n",
@@ -157,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
