--- a/Day2/Priors, Likelihoods, Posteriors, and All That Problems (No solutions).ipynb
+++ b/Day2/Priors, Likelihoods, Posteriors, and All That Problems (No solutions).ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6cec290e",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
     "# preliminaries \n",
     "\n",
     "from numpy.random import uniform \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -202,13 +202,17 @@
     "x_0 = 10\n",
     "y_0  = 30\n",
     "\n",
-    "# generate data assuming a uniform prior \n",
-    "\n",
-    "thetas = # you fill \n",
-    "\n",
-    "def make_data():\n",
+    "x_0s=np.random.uniform(-50,50)\n",
+    "y_0s=np.random.uniform(-50,50)\n",
+    "thetas = np.random.uniform(0,180)# you fill \n",
+    "def make_data(theta,r):\n",
     "    # function to return x positions at which pulses from the lighthouse are observed along the coast \n",
-    "    return # you fill \n",
+    "    #x = x_0 + r*np.cos(theta)\n",
+    "    #0 = y_0 + r*np.sin(theta)\n",
+    "    0=y_0/x_0+np.tan(theta)\n",
+    "    #y_0=-x_0*np.tan(theta)\n",
+    "    r=np.sqrt((x-x_0)**2 + (y_0)**2)\n",
+    "    return r*np.cos(theta)# you fill \n",
     "\n",
     "xs = make_data()"
    ]
@@ -222,6 +226,14 @@
     "\n",
     "Now, we need to determine the form of the likelihood. If you following the hint in 3a), we want to turn a function of the data (shoreline positions, x) in terms of the angle ($\\theta$). First, write down the relationship between the $x_0$ position of the lighthouse, the data x, and the angle ($\\theta$). If you get stuck here, ask us and we will provide the likelihood. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f03ba7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -613,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -627,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
